llama.xcframework/ios-arm64_x86_64-simulator/llama.framework/Headers/llama.h

    
    struct llama_model;
    struct llama_context;
    typedef int32_t llama_token;
    typedef struct llama_token_data {
        llama_token id; 
        float logit;    
        float p;        
    } llama_token_data;
    typedef struct llama_token_data_array {
        llama_token_data * data;
        size_t size;
        bool sorted;
    } llama_token_data_array;
    typedef bool (*llama_progress_callback)(float progress, void *ctx);
    struct llama_context_params {
        uint32_t seed;              
        uint32_t n_ctx;             
        uint32_t n_batch;           
        uint32_t n_threads;         
        uint32_t n_threads_batch;   
        int8_t   rope_scaling_type; 
        float    rope_freq_base;   
        float    rope_freq_scale;  
        float    yarn_ext_factor;  
        float    yarn_attn_factor; 
        float    yarn_beta_fast;   
        float    yarn_beta_slow;   
        uint32_t yarn_orig_ctx;    
        ggml_backend_sched_eval_callback cb_eval;
        void * cb_eval_user_data;
        enum ggml_type type_k; 
        enum ggml_type type_v; 
        bool mul_mat_q;   
        bool logits_all;  
        bool embedding;   
        bool offload_kqv; 
    };
    typedef struct llama_model_quantize_params {
        int32_t nthread;             
        enum llama_ftype ftype;      
        bool allow_requantize;       
        bool quantize_output_tensor; 
        bool only_copy;              
        bool pure;                   
        void * imatrix;              
    } llama_model_quantize_params;
    LLAMA_API struct llama_context_params llama_context_default_params(void);
    LLAMA_API void llama_free(struct llama_context * ctx);
    LLAMA_API bool llama_mmap_supported (void);
    LLAMA_API bool llama_mlock_supported(void);
    LLAMA_API uint32_t llama_n_ctx      (const struct llama_context * ctx);
    LLAMA_API int32_t llama_n_vocab    (const struct llama_model * model);
    LLAMA_API int32_t llama_n_embd     (const struct llama_model * model);
    LLAMA_API uint32_t llama_model_quantize(
            const char * fname_inp,
            const char * fname_out,
            const llama_model_quantize_params * params);
    LLAMA_API DEPRECATED(int32_t llama_apply_lora_from_file(
            struct llama_context * ctx,
                      const char * path_lora,
                           float   scale,
                      const char * path_base_model,
                         int32_t   n_threads),
            "use llama_model_apply_lora_from_file instead");
    LLAMA_API int32_t llama_get_kv_cache_token_count(const struct llama_context * ctx);
    LLAMA_API size_t llama_get_state_size(const struct llama_context * ctx);
    LLAMA_API size_t llama_copy_state_data(
            struct llama_context * ctx,
                         uint8_t * dst);
    LLAMA_API size_t llama_set_state_data(
            struct llama_context * ctx,
                         uint8_t * src);
    LLAMA_API bool llama_load_session_file(
            struct llama_context * ctx,
                      const char * path_session,
                     llama_token * tokens_out,
                          size_t   n_token_capacity,
                          size_t * n_token_count_out);
    LLAMA_API bool llama_save_session_file(
            struct llama_context * ctx,
                      const char * path_session,
               const llama_token * tokens,
                          size_t   n_token_count);
    LLAMA_API DEPRECATED(int llama_eval(
            struct llama_context * ctx,
                     llama_token * tokens,
                         int32_t   n_tokens,
                         int32_t   n_past),
            "use llama_decode() instead");
    LLAMA_API float * llama_get_logits(struct llama_context * ctx);
    LLAMA_API float * llama_get_embeddings(struct llama_context * ctx);
    LLAMA_API llama_token llama_token_bos(const struct llama_model * model); 
    LLAMA_API llama_token llama_token_eos(const struct llama_model * model); 
    LLAMA_API llama_token llama_token_nl (const struct llama_model * model); 
    LLAMA_API int32_t llama_tokenize(
        const struct llama_model * model,
                      const char * text,
                         int32_t   text_len,
                     llama_token * tokens,
                         int32_t   n_max_tokens,
                            bool   add_bos,
                            bool   special);
    LLAMA_API void llama_set_rng_seed(struct llama_context * ctx, uint32_t seed);
    LLAMA_API void llama_sample_softmax(
            struct llama_context * ctx,
          llama_token_data_array * candidates);
    LLAMA_API void llama_sample_top_k(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                         int32_t   k,
                          size_t   min_keep);
    LLAMA_API void llama_sample_top_p(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                           float   p,
                          size_t   min_keep);
    LLAMA_API void llama_sample_tail_free(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                           float   z,
                          size_t   min_keep);
    LLAMA_API void llama_sample_typical(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                           float   p,
                          size_t   min_keep);
    LLAMA_API DEPRECATED(void llama_sample_temperature(
                struct llama_context * ctx,
              llama_token_data_array * candidates,
                               float   temp),
            "use llama_sample_temp instead");
    LLAMA_API llama_token llama_sample_token_mirostat(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                           float   tau,
                           float   eta,
                         int32_t   m,
                           float * mu);
    LLAMA_API llama_token llama_sample_token_mirostat_v2(
            struct llama_context * ctx,
          llama_token_data_array * candidates,
                           float   tau,
                           float   eta,
                           float * mu);
    LLAMA_API llama_token llama_sample_token_greedy(
            struct llama_context * ctx,
          llama_token_data_array * candidates);
    LLAMA_API llama_token llama_sample_token(
            struct llama_context * ctx,
          llama_token_data_array * candidates);
    LLAMA_API void llama_print_timings(struct llama_context * ctx);
    LLAMA_API void llama_reset_timings(struct llama_context * ctx);
    LLAMA_API const char * llama_print_system_info(void);